# zero2prod

./: .env  Cargo.toml  config.yaml  docker-compose.yml
migrations/: 20220720105008_create_subscriptions_table.sql  20220726094238_create_subscription_tokens_table.sql  20220728074234_create_users_table.sql
src/: domain.rs  email_client.rs  lib.rs  main.rs  settings.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: confirm.rs  newsletters.rs  subscriptions.rs
tests/: health_check.rs
