[package]
# package.name as the binary name
name = "zero2prod"
version = "0.1.0"
authors = ["Alon Long <alonlong@weusre.cn>"]
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `packet.name`, which is waht we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an arry in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.1.0"
# We need the optional `derive` feature to use `serde` procedural macros:
# `#[derive(Serialize)]` and `#[derive(Deserialize)]`
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
config = "0.11.0"
uuid = { version = "1.1.2", features = ["v4"] }
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.17"

# Dev dependencies are used exclusively when running tests or examples
[dev-dependencies]
reqwest = "0.11.11"

# Using table-like toml syntax to avoid a super-long line
[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
