[package]
# package.name as the binary name
name = "zero2prod"
version = "0.1.0"
authors = ["Alon Long <alonlong@weusre.cn>"]
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `packet.name`, which is waht we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an arry in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.1.0"
# We need the optional `derive` feature to use `serde` procedural macros:
# `#[derive(Serialize)]` and `#[derive(Deserialize)]`
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
config = "0.13.1"
uuid = { version = "1.1.2", features = ["v4"] }
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.17"
tracing = { version = "0.1.35", features = ["log"] }
tracing-subscriber = { version = "0.3.11", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.5.1"
unicode-segmentation = "1.9.0"
validator = "0.15.0"
reqwest = { version = "0.11.11", features = ["json", "rustls-tls"] }
rand = { version = "0.8.5", features = ["std_rng"] }

# Dev dependencies are used exclusively when running tests or examples
[dev-dependencies]
once_cell = "1.12.0"
claim = "0.5.0"
fake = "~2.3"
quickcheck = "0.9.1"
quickcheck_macros = "0.9.1"
wiremock = "0.5.13"
serde_json = "1.0.81"

# Using table-like toml syntax to avoid a super-long line
[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
